examples/test/testpolicy1510.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1510
  namespace: namespace96
spec:
  podSelector:
    matchLabels:
      key4: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value15
          key43: value16
      podSelector:
        matchLabels:
          key1: value49
          key31: value14
          key15: value15
